--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>수원공고 융합소프트웨어과 | 교사 한종천 포트폴리오</title>
-    <meta name="description" content="수원공업고등학교 융합소프트웨어과 교사 한종천 홈페이지입니다.">
+    <title>수원공고 융합소프트웨어학과 | 교사 포트폴리오</title>
+    <meta name="description" content="수원공업고등학교 융합소프트웨어학과 교사 개인 홈페이지입니다.">
     
     <!-- Google Fonts (Pretendard & JetBrains Mono) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -133,7 +133,7 @@
         <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
             <div class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm rounded-full bg-gray-800 text-white hover:bg-gray-700 border border-gray-600 transition-all hover:scale-105 cursor-default" role="alert">
                 <span class="text-xs bg-primary rounded-full text-white px-4 py-1.5 mr-3 font-bold">Teacher</span> 
-                <span class="text-sm font-medium">수원공업고등학교 융합소프트웨어과</span> 
+                <span class="text-sm font-medium">수원공업고등학교 융합소프트웨어학과</span> 
                 <i class="ph ph-caret-right ml-2"></i>
             </div>
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
@@ -174,7 +174,7 @@
                         <p class="pl-4"><span class="text-primary">constructor</span>() {</p>
                         <p class="pl-8">this.name = <span class="text-green-400">"선생님 이름"</span>;</p>
                         <p class="pl-8">this.school = <span class="text-green-400">"수원공업고등학교"</span>;</p>
-                        <p class="pl-8">this.role = <span class="text-green-400">"융합소프트웨어과 교사"</span>;</p>
+                        <p class="pl-8">this.role = <span class="text-green-400">"융합소프트웨어학과 교사"</span>;</p>
                         <p class="pl-8">this.passion = [<span class="text-green-400">"EdTech"</span>, <span class="text-green-400">"AI"</span>, <span class="text-green-400">"IoT"</span>];</p>
                         <p class="pl-4">}</p>
                         <p class="pl-4 text-gray-500">// 학생들의 잠재력을 깨웁니다.</p>
@@ -190,7 +190,7 @@
                         <span class="text-primary">융합</span>을 지향합니다.
                     </h2>
                     <p class="mb-4">
-                        반갑습니다. 수원공업고등학교 융합소프트웨어과에서 학생들과 함께 성장하고 있는 교사 한종천입니다.
+                        반갑습니다. 수원공업고등학교 융합소프트웨어학과에서 학생들과 함께 성장하고 있는 교사입니다.
                         단순히 코드를 가르치는 것을 넘어, <strong class="text-white">문제를 해결하는 사고방식</strong>과 <strong class="text-white">협업의 가치</strong>를 전달하고자 합니다.
                     </p>
                     <p class="mb-4">
@@ -341,6 +341,27 @@
                         <p class="mb-4 font-light text-gray-400 text-sm">Open API를 활용하여 학교 급식 정보를 보여주는 반응형 웹 애플리케이션입니다.</p>
                     </div>
                 </article>
+
+                <!-- 프로젝트 4: QR코드 생성기 (추가됨) -->
+                <article class="bg-card border border-gray-700 rounded-lg overflow-hidden hover:shadow-xl hover:shadow-rose-500/20 transition-all hover:-translate-y-2 reveal-on-scroll delay-400">
+                    <div class="h-48 bg-gray-800 relative group overflow-hidden flex items-center justify-center">
+                        <div class="absolute inset-0 bg-gradient-to-tr from-rose-900 to-slate-900"></div>
+                        <i class="ph ph-qr-code text-6xl text-white/80 group-hover:scale-110 transition-transform duration-500"></i>
+                        <div class="absolute inset-0 bg-black/60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+                            <a href="https://skyh130.github.io/myhome/qr.html" target="_blank" class="text-white border border-white px-4 py-2 rounded-full hover:bg-white hover:text-black transition-colors">직접 해보기</a>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <div class="flex justify-between items-center mb-2">
+                            <span class="bg-rose-100 text-rose-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-rose-900 dark:text-rose-300">JavaScript / Tool</span>
+                            <a href="#" class="text-gray-400 hover:text-white"><i class="ph ph-github-logo text-xl"></i></a>
+                        </div>
+                        <h3 class="mb-2 text-xl font-bold tracking-tight text-white">
+                            <a href="https://skyh130.github.io/myhome/qr.html" target="_blank">QR코드 생성기</a>
+                        </h3>
+                        <p class="mb-4 font-light text-gray-400 text-sm">텍스트나 URL을 입력하면 즉시 QR코드를 생성해주는 유틸리티 페이지입니다. 수업 자료 배포 시 유용하게 사용됩니다.</p>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
@@ -353,7 +374,7 @@
                     <a href="#" class="flex items-center">
                         <span class="self-center text-2xl font-bold whitespace-nowrap text-white">Suwon Tech <span class="text-primary">CS</span></span>
                     </a>
-                    <p class="mt-2 text-sm text-gray-400">수원공업고등학교 융합소프트웨어과</p>
+                    <p class="mt-2 text-sm text-gray-400">수원공업고등학교 융합소프트웨어학과</p>
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
                     <div>
