--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                     <li><a href="#about" class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-primary md:p-0 transition-colors">About</a></li>
                     <li><a href="#skills" class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-primary md:p-0 transition-colors">Curriculum</a></li>
                     <li><a href="#projects" class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-primary md:p-0 transition-colors">Projects</a></li>
+                    <li><a href="https://skyh130.github.io/myhome/qr.html" target="_blank" class="block py-2 px-3 text-rose-400 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-rose-300 md:p-0 transition-colors">QR서비스</a></li>
                 </ul>
             </div>
         </div>
@@ -339,27 +340,6 @@
                         </div>
                         <h3 class="mb-2 text-xl font-bold tracking-tight text-white"><a href="#">급식 알리미 웹앱</a></h3>
                         <p class="mb-4 font-light text-gray-400 text-sm">Open API를 활용하여 학교 급식 정보를 보여주는 반응형 웹 애플리케이션입니다.</p>
-                    </div>
-                </article>
-
-                <!-- 프로젝트 4: QR코드 생성기 (추가됨) -->
-                <article class="bg-card border border-gray-700 rounded-lg overflow-hidden hover:shadow-xl hover:shadow-rose-500/20 transition-all hover:-translate-y-2 reveal-on-scroll delay-400">
-                    <div class="h-48 bg-gray-800 relative group overflow-hidden flex items-center justify-center">
-                        <div class="absolute inset-0 bg-gradient-to-tr from-rose-900 to-slate-900"></div>
-                        <i class="ph ph-qr-code text-6xl text-white/80 group-hover:scale-110 transition-transform duration-500"></i>
-                        <div class="absolute inset-0 bg-black/60 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                            <a href="https://skyh130.github.io/myhome/qr.html" target="_blank" class="text-white border border-white px-4 py-2 rounded-full hover:bg-white hover:text-black transition-colors">직접 해보기</a>
-                        </div>
-                    </div>
-                    <div class="p-6">
-                        <div class="flex justify-between items-center mb-2">
-                            <span class="bg-rose-100 text-rose-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-rose-900 dark:text-rose-300">JavaScript / Tool</span>
-                            <a href="#" class="text-gray-400 hover:text-white"><i class="ph ph-github-logo text-xl"></i></a>
-                        </div>
-                        <h3 class="mb-2 text-xl font-bold tracking-tight text-white">
-                            <a href="https://skyh130.github.io/myhome/qr.html" target="_blank">QR코드 생성기</a>
-                        </h3>
-                        <p class="mb-4 font-light text-gray-400 text-sm">텍스트나 URL을 입력하면 즉시 QR코드를 생성해주는 유틸리티 페이지입니다. 수업 자료 배포 시 유용하게 사용됩니다.</p>
                     </div>
                 </article>
             </div>
