--- a/qr.html
+++ b/qr.html
@@ -19,6 +19,14 @@
 </head>
 <body class="bg-white min-h-screen flex items-center justify-center p-4">
 
+    <!-- 좌측 상단 돌아가기 버튼 추가 -->
+    <a href="index.html" class="absolute top-4 left-4 flex items-center text-gray-400 hover:text-pink-500 transition-colors font-medium">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+        </svg>
+        돌아가기
+    </a>
+
     <!-- 배경이 흰색이므로 카드에 테두리(border)를 추가하여 구분감을 주었습니다 -->
     <div class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border border-gray-100 w-full max-w-md">
         
