--- a/exam-result.html
+++ b/exam-result.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <base target="_top">
-    <!-- Tailwind CSS 로드 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>합격 여부 확인</title>
@@ -15,9 +14,15 @@
       }
     </style>
   </head>
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen font-sans overflow-x-hidden">
+  <body class="bg-gray-100 flex items-center justify-center min-h-screen font-sans overflow-x-hidden relative">
 
-    <!-- z-index: 10과 position: relative를 추가하여 꽃가루 효과 위에 오도록 함 -->
+    <a href="index.html" class="absolute top-6 left-6 flex items-center text-gray-500 hover:text-blue-600 transition-colors duration-200 z-50">
+      <svg class="w-5 h-5 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+      </svg>
+      <span class="font-medium text-sm sm:text-base">돌아가기</span>
+    </a>
+
     <div class="bg-white p-8 rounded-2xl shadow-lg max-w-md w-full m-4 relative z-10">
       
       <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">지원 결과 확인</h1>
@@ -26,7 +31,6 @@
         지원 시 입력하신 이름과 연락처 뒤 4자리를 입력하세요.
       </p>
 
-      <!-- 입력 폼 -->
       <div class="space-y-4">
         <div>
           <label for="name" class="block text-sm font-medium text-gray-700 mb-1">이름</label>
@@ -39,12 +43,10 @@
         </div>
       </div>
 
-      <!-- 확인 버튼 -->
       <button id="checkButton" class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold mt-6 hover:bg-blue-700 transition duration-300 disabled:bg-gray-400">
         결과 확인
       </button>
 
-      <!-- 로딩 스피너 (초기 숨김) -->
       <div id="loading" class="hidden text-center mt-6">
         <svg class="animate-spin h-6 w-6 text-blue-500 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
           <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -53,10 +55,8 @@
         <p class="text-gray-500 text-sm mt-2">결과를 조회 중입니다...</p>
       </div>
 
-      <!-- 결과 표시 영역 -->
       <div id="resultArea" class="mt-6 text-center">
-        <!-- 결과가 여기에 표시됩니다. -->
-      </div>
+        </div>
 
     </div>
 
@@ -131,7 +131,6 @@
           resultHtml = `
             <div class="transform transition-all duration-500 scale-100 opacity-100">
               <div class="p-8 rounded-lg shadow-2xl bg-gradient-to-br from-blue-500 via-indigo-500 to-purple-600 text-white">
-                <!-- 트로피 아이콘 -->
                 <svg class="w-24 h-24 mx-auto text-yellow-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" d="M11.658 2.02A.5.5 0 0011 2.5v1.282A4.5 4.5 0 007.5 8.5v3.657a.5.5 0 00.18.384l3.5 2.625a.5.5 0 00.64 0l3.5-2.625a.5.5 0 00.18-.384V8.5a4.5 4.5 0 00-3.658-4.718V2.5a.5.5 0 00-.842-.48zM10 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"></path>
                   <path d="M5.5 4.223A5.5 5.5 0 0110 3.5c1.474 0 2.82.583 3.824 1.545a.5.5 0 00.632-.77A6.5 6.5 0 0010 2.5a6.5 6.5 0 00-5.457 3.098a.5.5 0 00.615.688.5.5 0 00.342-.163zM18.82 9.115a.5.5 0 00-.64-.72l-1.42.472A4.5 4.5 0 0013.5 8.5V6.777a.5.5 0 00-.82-.387A6.5 6.5 0 0010 5.5c-1.74 0-3.32.678-4.5 1.777a.5.5 0 00-.82.387V8.5a4.5 4.5 0 00-3.26 3.368l-1.42-.472a.5.5 0 00-.64.72l.067.202a6.5 6.5 0 003.712 5.094a.5.5 0 00.518-.08A4.5 4.5 0 007.5 17h5a4.5 4.5 0 003.957 2.443a.5.5 0 00.518.08 6.5 6.5 0 003.712-5.094l.067-.202z"></path>
