--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <!-- QR서비스: target="_blank" 제거 (현재창 실행) -->
                     <li><a href="https://skyh130.github.io/myhome/qr.html" class="block py-2 px-3 text-rose-400 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-rose-300 md:p-0 transition-colors">QR서비스</a></li>
                     <!-- 합격자조회: 추가됨, 현재창 실행, 색상은 합격(Pass)을 상징하는 에메랄드/그린 계열 사용 -->
-                    <li><a href="https://skyh130.github.io/myhome/exam-result.html" class="block py-2 px-3 text-emerald-400 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-emerald-300 md:p-0 transition-colors">합격자조회</a></li>
+                    <li><a href="https://script.google.com/macros/s/AKfycbyW71QFhajsC-VtuOZfPHooe5fIC-XciwvtFDL507MkdQEeQPJWb-d53koVIPaFVqnnTg/exec" class="block py-2 px-3 text-emerald-400 rounded hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-emerald-300 md:p-0 transition-colors">합격자조회</a></li>
                 </ul>
             </div>
         </div>
