--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@
                         <h2 class="mb-6 text-sm font-semibold text-white uppercase">Contact</h2>
                         <ul class="text-gray-400 font-medium">
                             <li class="mb-4">
-                                <a href="mailto:teacher@example.com" class="hover:text-white hover:underline">Email Me</a>
+                                <a href="mailto:ds3cyz@gmail.com.com" class="hover:text-white hover:underline">Email Me</a>
                             </li>
                             <li>
-                                <a href="tel:031-123-4567" class="hover:text-white hover:underline">031-123-4567</a>
+                                <a href="tel:031-307-4318" class="hover:text-white hover:underline">031-307-4318</a>
                             </li>
                         </ul>
                     </div>
